# wcgi-rust-template

./: Cargo.toml  README.md  app.yaml  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js  wapm.toml  wasmer.toml
.github/workflows/: ci.yml
bytes/: all.html  index.html  struct.Bytes.html  struct.BytesMut.html
bytes/buf/: index.html  struct.Chain.html  struct.IntoIter.html  struct.Limit.html  struct.Reader.html  struct.Take.html  struct.UninitSlice.html  struct.Writer.html  trait.Buf.html  trait.BufMut.html
cgi/: all.html  fn.binary_response.html  fn.empty_response.html  fn.err_to_500.html  fn.handle.html  fn.html_response.html  fn.string_response.html  fn.text_response.html  index.html  macro.cgi_main!.html  macro.cgi_main.html  macro.cgi_try_main!.html  macro.cgi_try_main.html  sidebar-items.js  type.Request.html  type.Response.html
fnv/: all.html  index.html  struct.FnvHasher.html  type.FnvBuildHasher.html  type.FnvHashMap.html  type.FnvHashSet.html
http/: all.html  index.html  struct.Error.html  struct.Extensions.html  type.Result.html
http/header/: constant.ACCEPT.html  constant.ACCEPT_CHARSET.html  constant.ACCEPT_ENCODING.html  constant.ACCEPT_LANGUAGE.html  constant.ACCEPT_RANGES.html  constant.ACCESS_CONTROL_ALLOW_CREDENTIALS.html  constant.ACCESS_CONTROL_ALLOW_HEADERS.html  constant.ACCESS_CONTROL_ALLOW_METHODS.html  (+96 more)
itoa/: all.html  index.html  struct.Buffer.html  trait.Integer.html
src/: main.rs
wcgi_rust_template/: all.html  fn.handler.html  fn.main.html  index.html  sidebar-items.js
(+139 files in other folders)
