[package]
name = "wcgi-rust-template"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2021"
homepage = "https://github.com/wasmerio/wcgi-rust-template.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wasmerio/wcgi-rust-template.git"
rust-version = "1.64.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgi = "0.6.0"
